--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@ run
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+MinecraftForge-Credits.txt
+Paulscode IBXM Library License.txt
+Paulscode SoundSystem CodecIBXM License.txt
+README.txt
+LICENSE-new.txt
+gradlew
+gradlew.bat
+gradle.properties
+forge-1.10.2-12.18.3.2185-changelog.txt
+CREDITS-fml.txt
