--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "1.1.0"
-group= "com.jam.justamagnet" 
+group= "pro.mikey.jam"
 archivesBaseName = "justamagnet-1.12.2"
 
 sourceCompatibility = targetCompatibility = '1.8' 
