--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,13 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.+', changing: true
     }
+}
+
+plugins {
+    id "com.matthewprenger.cursegradle" version "1.4.0"
+    id 'pro.mikey.changelog' version '1.0.0-build.8'
 }
 
 apply plugin: 'net.minecraftforge.gradle'
@@ -14,8 +19,12 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = mod_version
-group= "pro.mikey.jam"
+group = "pro.mikey.jam"
 archivesBaseName = "justamagnet-${game_version}"
+def env = System.getenv()
+if (env.GITHUB_RUN_NUMBER) {
+    version += "-build." + "${env.GITHUB_RUN_NUMBER}"
+}
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
@@ -71,15 +80,22 @@ dependencies {
 jar {
     manifest {
         attributes([
-                "Specification-Title": "JAM Just a magnet",
-                "Specification-Vendor": "ErrorMikey",
-                "Specification-Version": "1", // We are version 1 of ourselves
-                "Implementation-Title": project.name,
-                "Implementation-Version": "${version}",
-                "Implementation-Vendor" :"ErrorMikey",
+                "Specification-Title"     : "JAM Just a magnet",
+                "Specification-Vendor"    : "ErrorMikey",
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Vendor"   : "ErrorMikey",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+}
+
+generateChangelog {
+    changelogFile = file("$buildDir/changelog.md")
+    captureKey = "(update)"
+    startSha = "$env.GIT_COMMIT"
+    endSha = "$env.GIT_PREVIOUS_COMMIT"
 }
 
 // Example configuration to allow publishing using the maven-publish task
@@ -99,22 +115,25 @@ publishing {
     }
     repositories {
         maven {
-            url "file:///${project.projectDir}/mcmodsrepo"
+            url "https://maven.saps.dev/releases"
+            credentials {
+                username = "mikey"
+                password = "${env.MAVEN_TOKEN}"
+            }
         }
     }
 }
 
-
-if (System.getenv().CURSEFORGE_KEY) {
+if (env.CURSE_DEPLOY_TOKEN) {
     curseforge {
-        apiKey = System.getenv().CURSE_DEPLOY_TOKEN
+        apiKey = env.CURSE_DEPLOY_TOKEN
         project {
             id = project.curseforge_id
             releaseType = "release"
             addGameVersion "Forge"
             addGameVersion "${game_version}"
             mainArtifact(remapJar.archivePath)
-            changelog = "See [https://github.com/MichaelHillcox/Just-a-Magnet-Mod](https://github.com/MichaelHillcox/Just-a-Magnet-Mod)"
+            changelog = file("$buildDir/changelog.md")
             changelogType = 'markdown'
         }
     }
