--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,17 +21,15 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Build with Gradle
         env:
           MAVEN_TOKEN: ${{ secrets.MAVEN_TOKEN }}
           CURSE_DEPLOY_TOKEN: ${{ secrets.CURSE_DEPLOY_TOKEN }}
-        run: ./gradlew build publish
-      - name: Push to curse
-        env:
-          CURSE_DEPLOY_TOKEN: ${{ secrets.CURSE_DEPLOY_TOKEN }}
           GIT_COMMIT: ${{ github.event.after }}
           GIT_PREVIOUS_COMMIT: ${{ github.event.before }}
-        run: ./gradlew build generateChangelog curseforge
+        run: ./gradlew build publish generateChangelog curseforge
       - name: Setting mod version
         run: |
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^mod_version= >> $GITHUB_ENV
