--- a/build.gradle
+++ b/build.gradle
@@ -98,15 +98,13 @@ generateChangelog {
     endSha = "$env.GIT_PREVIOUS_COMMIT"
 }
 
-// Example configuration to allow publishing using the maven-publish task
-// we define a custom artifact that is sourced from the reobfJar output task
-// and then declare that to be published
-// Note you'll need to add a repository here
+
 def reobfFile = file("$buildDir/reobfJar/output.jar")
 def reobfArtifact = artifacts.add('default', reobfFile) {
     type 'jar'
     builtBy 'reobfJar'
 }
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -132,7 +130,7 @@ if (env.CURSE_DEPLOY_TOKEN) {
             releaseType = "release"
             addGameVersion "Forge"
             addGameVersion "${game_version}"
-            mainArtifact(remapJar.archivePath)
+            mainArtifact(reobfArtifact)
             changelog = file("$buildDir/changelog.md")
             changelogType = 'markdown'
         }
