--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,12 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
+        run: ./gradlew --no-daemon --refresh-dependencies --continue clean build
+      - name: Publish
         env:
           MAVEN_TOKEN: ${{ secrets.MAVEN_TOKEN }}
           CURSE_DEPLOY_TOKEN: ${{ secrets.CURSE_DEPLOY_TOKEN }}
-          GIT_COMMIT: ${{ github.event.after }}
-          GIT_PREVIOUS_COMMIT: ${{ github.event.before }}
-        run: ./gradlew --no-daemon --refresh-dependencies --continue clean build publish generateChangelog curseforge
+        run: ./gradlew --no-daemon --refresh-dependencies --continue publish curseforge
       - name: Setting mod version
         run: |
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^mod_version= >> $GITHUB_ENV
