--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,9 @@ jobs:
         run: |
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^mod_version= >> $GITHUB_ENV
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^game_version= >> $GITHUB_ENV
+          cat $GITHUB_WORKSPACE/gradle.properties | grep ^flat_game_version= >> $GITHUB_ENV
       - name: Create package name
-        run: echo "package_name=justamagnet-$game_version-$mod_version-build.$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+        run: echo "package_name=justamagnet-$flat_game_version-$mod_version-build.$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ env.package_name }}
