--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,8 @@
 org.gradle.jvmargs=-Xmx3G
-
-mod_version=1.2.0
-game_version=1.14.4
-
+mod_version=1.3.0
+game_version=1.15.2
+flat_game_version=1502
 # Forge
-forge_version=28.2.23
-forge_mappings=20190719-1.14.3
-
+forge_version=31.2.50
+forge_mappings=20200514-1.15.1
 curseforge_id=274006
