--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 }
 
 minecraft {
-    mappings channel: 'snapshot', version: "${forge_mappings}"
+    mappings channel: 'official', version: "${game_version}"
     runs {
         client {
             workingDirectory project.file('run')
